# axum-experiments

./: Cargo.toml
api/: Cargo.toml
api/src/: main.rs  middleware.rs
handlers/: Cargo.toml
handlers/src/: lib.rs
shared/: Cargo.toml
shared/src/: lib.rs
timber/: Cargo.toml
timber/src/: lib.rs
