[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlers = { path = "../handlers" }
timber = { path = "../timber" }
axum = "0.6.6"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
http = "0.2.8"
hyper = "0.14.24"
tower-http = { version = "0.3.5", features = ["trace"] }
tower-request-id = "0.2.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
